--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ concurrency:
   group: ${{ github.workflow }}
 
 env:
-  ITCH_USER: seansleblanc
-  ITCH_GAME: js-walkaround-template
+  ITCH_USER: sweetheartsquad
+  ITCH_GAME: peril-in-meowland
   DISCORD_USERNAME: ${{ github.repository }}
   DISCORD_AVATAR: https://raw.githubusercontent.com/${{ github.repository }}/main/src/assets/icon.png
 
