--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ concurrency:
 
 env:
   ITCH_USER: sweetheartsquad
-  ITCH_GAME: peril-in-meowland
+  ITCH_GAME: toc-toc
   DISCORD_USERNAME: ${{ github.repository }}
   DISCORD_AVATAR: https://raw.githubusercontent.com/${{ github.repository }}/main/src/assets/icon.png
 
