--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"name": "agbic2023",
 	"version": "1.0.0",
-	"description": "Peril in Meowland",
+	"description": "TOC TOC",
 	"main": "./src/index.js",
 	"author": "SweetHeart Squad <SweetHeartSquad@gmail.com>",
 	"scripts": {
