--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,17 @@ jobs:
           ITCH_USER: ${{ env.ITCH_USER }}
           PACKAGE: dist
           VERSION: ${{ steps.package-version.outputs.current-version }}
+
+      - run: node ./generate-hints.js
+      - uses: josephbmanley/butler-publish-itchio-action@v1.0.3
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.ITCH_API_KEY }}
+          CHANNEL: hints
+          ITCH_GAME: ${{ env.ITCH_GAME }}
+          ITCH_USER: ${{ env.ITCH_USER }}
+          PACKAGE: hints.html
+          VERSION: ${{ steps.package-version.outputs.current-version }}
+
       - uses: Ilshidur/action-discord@0.3.2
         if: ${{ success() }}
         env:
